updated screenshots for the first project

--- a/projects/01-recoverability-in-aws/s3/index.html
+++ b/projects/01-recoverability-in-aws/s3/index.html
@@ -1,7 +1,7 @@
 <html>
   <style>
     body {
-      background-image: url('winter.jpg');
+      background-image: url('fall.jpg');
     }
     div#time {
       font-size: 65px;
@@ -12,11 +12,11 @@
   </style>
   <head>
     <title>
-      Hello
+      [Lab.Thingx.Cloud] :: Hello
     </title>
   </head>
   <body>
-    <div align="center" id='hello'>Welcome to the upcoming season!!</div>
+    <div align="center" id='hello'>Welcome to the upcoming season!! fall </div>
     <div align="center" id='time'></div>
 
     <script type="text/javascript">
